tests/baselines/reference/classExpressionWithStaticPropertiesES62.errors.txt
tests/cases/compiler/classExpressionWithStaticPropertiesES62.ts(1,15): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/compiler/classExpressionWithStaticPropertiesES62.ts (1 errors) ====
    var v = class C { static a = 1; static b };
                  ~
!!! error TS9003: 'class' expressions are not currently supported.